--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@ layout: default
 </div>
 
 <div style="text-align: center;">
-    <a href="/about/">About</a>
+    <a href="/post/about/">About</a>
 </div>
