UPDATE: add link to My GPTs

--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@ layout: default
 
 <div style="text-align: center;">
     <a href="/post/about/">About</a>
+    <a href="/mygpts/">My GPTs</a>
 </div>
