--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@ layout: default
 
 <div style="text-align: center;">
     <a href="/post/about/">About</a>
+    <span> | </span>
     <a href="/mygpts/">My GPTs</a>
 </div>
