--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <div>
     {% for post in site.posts %}
     <div>
-        <h3>{{ post.title }}</h3>
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
         <h5>{{ post.date | date: "%Y-%m-%d" }}</h5>
         <p>
             {{ post.excerpt | truncate: 1600 }}<span><a href="{{ post.url }}">Read more</a></span>
