--- a/callback.html
+++ b/callback.html
@@ -14,7 +14,7 @@
 
     if (code) {
       // 将 `code` 发送到后端服务器
-      fetch('https://your-backend-url.com/auth/github', { // 替换为真实的后端地址
+      fetch('https://auth-service.thiswind.work/api/auth', { // 替换为你的后端地址
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
